# Minecraft-copy-OPENGL

./: CMakeLists.txt
external_ref/: glad.c
include/glad/: glad.h
shaders/: cs_shader.fs  cs_shader.vs  l_test_shader.fs  l_test_shader.vs  m_l_test_shader.fs  shader.fs  shader.vs
src/: main.cpp  stb_lib.cpp
src/Camera/: camera.cpp  camera.hpp
src/Debug/: CoordSystem.cpp  CoordSystem.hpp  Debug.hpp  WorldCoordSystem.cpp  WorldCoordSystem.hpp
src/InputHandler/: input_handler.cpp  input_handler.hpp
src/Primitive/: Shape.hpp
src/Primitive/Cube/: cube.cpp  cube.hpp  ll_cube.cpp  ll_cube.hpp
src/Primitive/Quad/: quad.cpp  quad.hpp
src/Primitive/Triangle/: test_triangle.cpp  test_triangle.hpp  triangle.cpp  triangle.hpp
src/Shaders/: shaders.cpp  shaders.hpp
src/Texture/: texture.cpp  texture.hpp
src/Utils/: utils.cpp  utils.hpp
src/Window/: window.cpp  window.hpp
testing_cpp_shits/: a.out  class_testing  class_testing.cpp  concatenating_strings.cpp  cs  ct  main  prog  prog.cpp  prog.h  string_methods.cpp  strings_methods
testing_cpp_shits/class_testing.dSYM/Contents/: Info.plist
testing_cpp_shits/class_testing.dSYM/Contents/Resources/DWARF/: class_testing
testing_cpp_shits/class_testing.dSYM/Contents/Resources/Relocations/aarch64/: class_testing.yml
testing_cpp_shits/main.dSYM/Contents/Resources/DWARF/: main
testing_cpp_shits/main.dSYM/Contents/Resources/Relocations/aarch64/: main.yml
testing_cpp_shits/prog.dSYM/Contents/Resources/DWARF/: prog
